# BlueOS-Extensions-Repository

./: .gitignore  README.md  index.html  manifest.json  pyproject.toml
.github/workflows/: comment-new-pr.yml  deploy.yml  test.yml
.hooks/: pre-push
assets/: Default.05c58171.js  Default.0e0a8c91.js  Default.2181d1af.js  Default.37d89749.css  Default.6030c460.js  Default.a8876631.js  Default.b65af836.css  Default.dab691be.js  Default.e57fe655.js  Default.ff5d630f.js  Home.0ebd6e66.css  Home.22e2a959.js  Home.2cc644da.js  Home.3abc1987.css  Home.4fd5400c.js  Home.81c20dd0.css  Home.87d8783a.js  Home.8e25073c.js  Home.bafea662.js  Home.bfb9af05.js  Home.f943edf6.js  Logs.5f03217e.js  Logs.9faac4c3.js  Logs.bb3d2527.js  Logs.c594d91d.css  color.3a095760.css  color.3bb8558e.js  color.4f136927.js  color.697fd19e.js  color.a365e1a6.js  color.a455a82a.js  index.39b9c9ba.css  index.47e5c53a.js  index.55fdf0c5.js  index.69852f9a.js  index.6b432909.js  index.bb1d80f1.js  index.bd85ef7e.js  index.bdc38d83.js  index.f666e7f7.js  (+4 more)
blueos_repository/: consolidate.py  exceptions.py  logger.py  registry.py  utils.py
blueos_repository/docker/: auth.py  hub.py  image_ref.py  registry.py
blueos_repository/docker/models/: auth.py  blob.py  limit.py  manifest.py  repo.py  tag.py
blueos_repository/extension/: extension.py  models.py
blueos_repository/extension/utils/: markdown_img_encoder.py
repos/anbsensors/pH_sensor/: metadata.json
repos/bluerobotics/blueos-bb/: metadata.json
repos/bluerobotics/blueos-documentation/: metadata.json
repos/bluerobotics/blueos-doris/: metadata.json
repos/bluerobotics/cellphone-modem-manager/: metadata.json
repos/bluerobotics/cellular-modem-manager/: metadata.json
repos/bluerobotics/cockpit/: metadata.json
repos/bluerobotics/jupyter/: metadata.json
repos/bluerobotics/navigator-webassistant/: metadata.json
repos/bluerobotics/node-red/: metadata.json
repos/bluerobotics/openvscode/: metadata.json
repos/bluerobotics/ping-viewer-next/: metadata.json
repos/bluerobotics/power-switch-calibration/: metadata.json
repos/bluerobotics/radcam-manager/: metadata.json
repos/bluerobotics/ros/: metadata.json
repos/bluerobotics/water-linked-dvl/: metadata.json
repos/bluerobotics/waterlinked-ugps/: metadata.json
repos/bluerobotics/yacht/: metadata.json
repos/ceruleansonar/cerulean-docs/: metadata.json
repos/ceruleansonar/cerulean-dvl/: metadata.json
repos/ceruleansonar/cerulean-user-manuals/: metadata.json
repos/ceruleansonar/sonarview/: metadata.json
repos/clydemcqueen/surftrak_fixit/: metadata.json
repos/clydemcqueen/wl_ugps_external/: metadata.json
repos/deepwaterexploration/dwe_os_2/: metadata.json
repos/itskalvik/ros2/: metadata.json
repos/itskalvik/sgptools/: metadata.json
repos/jmrobotics/jm-connect/: metadata.json
repos/marinesitu/madrona/: metadata.json
repos/nortekgroup/nucleus/: metadata.json
repos/patrickelectric/foxglove/: metadata.json
repos/patrickelectric/jupyter/: metadata.json
repos/patrickelectric/mcm-cpu-analyzer/: metadata.json
repos/patrickelectric/node-red/: metadata.json
repos/patrickelectric/openvscode/: metadata.json
repos/patrickelectric/starlink-position/: metadata.json
repos/patrickelectric/yacht/: metadata.json
repos/rafaellehmkuhl/websocket-streamer-for-cockpit/: metadata.json
repos/rmackay9/camera-download/: metadata.json
repos/rmackay9/opticalflow/: metadata.json
repos/rmackay9/precision-landing/: metadata.json
repos/sonardyne/navsync_pro/: metadata.json
repos/vshie/airmar-wx/: metadata.json
repos/vshie/marine-magnetics-explorer/: metadata.json
repos/vshie/mikrotik-monitor/: metadata.json
repos/vshie/pingSurvey/: metadaata.json  metadata.json
repos/vshie/subreels-auv/: metadata.json
repos/waterlinked/sonar/: metadata.json
repos/waterlinked/ugps/: metadata.json
repos/williangalvani/blueos-proxy/: metadata.json
repos/williangalvani/dashcam/: metadata.json
repos/williangalvani/example1/: metadata.json
repos/williangalvani/example2/: metadata.json
repos/williangalvani/example3/: metadata.json
repos/williangalvani/example4/: metadata.json
tests/: conftest.py  test_registries.py
website/: index.html  package.json  vite.config.ts
website/src/router/: index.ts
(+16 files in other folders)
