# This file is used only for setting up CI. no deployment is done with it

[project]
name = "blueos-extensions-repository"
version = "0.0.1"
description = "Blue Robotics BlueOS Extensions Repository"
authors = [
  {name = "Blue Robotics", email = "software@bluerobotics.com"},
]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "aiocache==0.12.2",
    "aiohttp==3.11.18",
    "aiohttp-retry==2.8.3",
    "beautifulsoup4==4.12.3",
    "dataclass-wizard==0.35.0",
    "json-five==1.1.1",
    "markdown==3.6",
    "pillow==10.4.0",
    "semver>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "isort==5.10.1",
    "mypy==0.981",
    "pydantic==1.9.0",
    "pylint==3.3.7",
    "types-Markdown==3.6.0.20240316",
]

[tool.setuptools]
packages = [
  "blueos_repository",
  "blueos_repository.docker",
  "blueos_repository.extension"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint.master]
enable = "all"
disable = [
    "broad-exception-raised",
    "line-too-long", # We already have this in black.
    "locally-disabled", # We know what we are doing, necessary to load plugins in runtime
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "suppressed-message",
    "wrong-import-position",
]

[tool.pylint.miscellaneous]
notes = ["FIXME"] # TODO is removed for internal development

[tool.mypy]
allow_untyped_decorators = true
disallow_subclassing_any = false
ignore_missing_imports = true
strict = true
warn_unreachable = true
warn_unused_ignores = false
